--- a/style.css
+++ b/style.css
@@ -1,12 +1,20 @@
 *{
 	margin: 0;
-	border:0;
+	padding: 0;
 }
 .header{
 	height: 100vh;
-	background: url('Assets/MG_4219.jpg') no-repeat;
+	background: url('Assets/imgheader.jpg') no-repeat;
     background-size: cover;
     background-position: center;
+    position: relative;
+}
+/*.filtro{
+	width: 100vw;
+	height: 100vh;
+	background-image: linear-gradient(to right, rgba(150, 217, 252, 0.3), rgba(235, 38, 143, 0.3));
+	position: absolute;
+	left: 200px;*/
 }
 .menurolativo{
 	position: fixed;
@@ -20,16 +28,23 @@
 }
 .imgmenu{
 	margin-top: 30px;
-	width: 200px;
+	width: 190px;
 }
 .imgmenino{
 	width: 300px;
 	position: absolute;
-	left: 110%;
+	left: 20%;
 	bottom: 1px;
 }
 .h1menu{
-	
+	color: #fff;
+	font-family: "adobe-clean", sans-serif ;
+	font-size: 50px;
+	font-weight: bold;
+
+	position: absolute;
+	top: 50%;
+	left: 50%;
 }
 .textomenu{
 	margin: 20%;
@@ -43,45 +58,20 @@
 	text-decoration: none;
 	color: #A6538D;
 }
-.main_atividades{
-	width: 100vw;
-	height: 90vh;
+.sec_ativ{
+	height:100vh;
+	width: 80vw;
 	background-color: #EB268F;
-}
-.sec_atividades{
-	padding:30px 0px 20px 21%; 
-	display: flex;
-	flex-direction: row;
-	
-}
-.sec_atividades_img{
-	height: 290px;
-	width: 470px;
-	margin: 0px 0px 2px 10px
 
 }
-.sec_atividades_p{	
+.sec_ativ_p{
+	height: 476px;
+	width: 456px;
 	color: #FFFFFF;
-	margin: 0px 0px 15px 25px;
-	font-size: 20px;
-	width: 35vw;
-	height:41vh;
-	font-family: "adobe-clean", sans-serif;
-}
-.sec2_atividades{
-	display: flex;
-	flex-direction: row;
-	justify-content: flex-end;
-	
-}
-.sec2_atividades_imgs{
-	height: 200px;
-	padding-left:20px;
-}
-.foto2{
-	max-width: 211px;
-}
-.foto4{
-	max-width: 211px;
-	padding-right:74px;
+	font-size: 15px;
+	font-family: ;
+	position: relative;
+	top: 80px;
+	left: 250px;
+
 }
