--- a/style.css
+++ b/style.css
@@ -41,7 +41,6 @@
 	font-family: "adobe-clean", sans-serif ;
 	font-size: 50px;
 	font-weight: bold;
-
 	position: absolute;
 	top: 50%;
 	left: 50%;
@@ -58,20 +57,36 @@
 	text-decoration: none;
 	color: #A6538D;
 }
+main{
+	background-color: #EB268F;
+}
 .sec_ativ{
 	height:100vh;
 	width: 80vw;
-	background-color: #EB268F;
 
 }
+.sec_ativ_div{
+
+}
+/*@font-face{
+	font-family: korolev-medium;
+	src:"fonts/korolevmedium.woff";
+}*/
 .sec_ativ_p{
-	height: 476px;
-	width: 456px;
+	height: 420px;
+	width: 350px;
 	color: #FFFFFF;
-	font-size: 15px;
-	font-family: ;
+	font-family: korolev-medium;
+	font-size: 19px;
+	padding-top: 60px;
 	position: relative;
-	top: 80px;
-	left: 250px;
+	top:10%;
+	left:25%;
+
+}
+.sec_ativ_div2{
+
+}
+.sec_ativ_div2-img{
 
 }
